# mirofish-english

./: .env.anthropic.example  .env.example  .env.lmstudio.example  .env.ollama.example  .env.openai.example  .gitignore  AGPL-COMPLIANCE.md  CONTRIBUTING.md  Dockerfile  NOTICE.md  README.md  SECURITY.md  SETUP.md  docker-compose.yml  package.json  start.ps1  start.sh
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  deliberation.py  graph.py  report.py  search.py  simulation.py
backend/app/models/: __init__.py  deliberation.py  deliberation_manager.py  project.py  task.py
backend/app/services/: __init__.py  claim_ledger.py  constraint_mapper.py  council_engine.py  credibility_assessor.py  editorial_consolidator.py  evidence_brief_builder.py  evidence_grounding.py  graph_builder.py  missing_input_detector.py  news_injection_service.py  oasis_profile_generator.py  ontology_generator.py  quality_gate_evaluator.py  quality_validator.py  quantitative_validator.py  report_agent.py  report_artifacts.py  report_intent_analyzer.py  report_schema_registry.py  run_trace_builder.py  search_plan_builder.py  search_service.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  source_quality_ranker.py  synthesis_agent.py  text_processor.py  verification_manager.py  voting_service.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
backend/app/utils/: __init__.py  file_parser.py  graphiti_clients.py  llm_client.py  llm_provider.py  logger.py  openai_compatible.py  (+2 more)
backend/scripts/: action_logger.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
backend/tests/: test_graphiti_clients.py  test_openai_compatible.py  test_provider_matrix_config.py  test_report_intelligence_pipeline.py  test_search_service.py  test_voting_service.py  test_zep_graph_memory_updater.py
(+32 files in other folders)
